# FWOptimizer

./: .gitignore  README.md  log.txt  pyproject.toml
.github/: .pylintrc  annotate_pylint.py  annotate_pytest.py  anotate_pytest.py
.github/workflows/: main.yml
fwoptimizer/: main.py
fwoptimizer/classes/: __init__.py  fdd.py  firewall.py  parser.py  rules.py
fwoptimizer/configs/: fdd_config.toml
fwoptimizer/configs/syntaxes/: __init__.py  iptables_syntax.py
fwoptimizer/controllers/: consoleCommands.py  fwoController.py
fwoptimizer/core/: __init__.py  comparator.py  fdd.py  fields.py  firewall.py  parser.py  rules.py
fwoptimizer/model/: consoleCommands.py  fwoManager.py
fwoptimizer/utils/: __init__.py  aliasDict.py  chainComparator.py  elementSet.py
fwoptimizer/views/: customWidgets.py  dialogs.py  fwoView.py  imageView.py  mainView.py  resources_rc.py
requirements/: default_reqs.txt
resources/: interface.ui  resources.qrc
tests/: conftest.py  test_fdd_config.toml  test_set.txt
tests/unit/: test_chainComparator.py  test_elementSet.py  test_equivalenceCheck.py  test_fdd.py  test_firewall.py  test_parser.py
